--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,13 +13,13 @@
     <ion-input type="text" #email required></ion-input>
   </ion-item>
   <ion-item lines="full">
-    <ion-label position="floating">Password</ion-label>
+    <ion-label position="floating">Contraseña</ion-label>
     <ion-input type="password" #password required></ion-input>
   </ion-item>
   <ion-row>
     <ion-col>
       <ion-button type="submit" (click)="logIn(email, password)" expand="block"
-        >Login</ion-button
+        >Iniciar Sesión</ion-button
       >
     </ion-col>
   </ion-row>
@@ -30,7 +30,7 @@
         color="warning"
         [routerLink]="['/password-reset']"
       >
-        Password Reset
+        Recuperar Contraseña
       </ion-button>
     </ion-col>
   </ion-row>
@@ -41,7 +41,7 @@
         color="danger"
         (click)="authService.GoogleAuth()"
         expand="block">
-        Login with Google
+        Iniciar sesión con Google
       </ion-button>
     </ion-col>
   </ion-row>
