--- a/src/app/logout/logout.page.html
+++ b/src/app/logout/logout.page.html
@@ -1,1 +1,1 @@
-<ion-button type="submit" (click)="authService.SignOut()" expand="block">Logout</ion-button>
+<ion-button type="submit" (click)="authService.SignOut()" expand="block">Cerrar Sesión</ion-button>
