Changing user interface

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,23 +1,33 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title> Pizzas Alvarito </ion-title>
+  <ion-toolbar class="custom-toolbar">
+    <ion-title class="custom-title-font" style="text-align: right;"><b>Pizzas Locas Alvarito</b></ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content class="auth-form">
+  <ion-item class="ion-margin">
+    <ion-label class="ion-text-wrap">
+      <h1 class="custom-title-font" style="color:#fed49c"><b>Bienvenido(a)</b></h1>
+      <p class="custom-title-font" style="color:white">
+        <br>
+        Si ya haces parte de nuestros crazy users, inicia sesión; de lo contrario te invitamos a registrarte para realizar tu 
+        pedido y disfrutar de nuestras maravillosas pizzas.
+    </ion-label>   
+  </ion-item> 
+
   <ion-grid>
     <ion-row>
       <ion-col class="ion-align-self-center">
-        <ion-button
-          [routerLink]="['/registro']"
-          expand="block"
-          color="primary"
-          >Registrarse</ion-button
-        >
-        <span class="divider line one-line">o</span>
-        <span class="already"> Ya tienes usuario?</span>
-        <ion-button [routerLink]="['/login']" expand="block" color="danger"
-          >Iniciar Sesión</ion-button
-        >
+        <ion-button [routerLink]="['/registro']" expand="block" color="primary" class="custom-title-font">
+          <ion-icon slot="start" name="person-add" color="dark"></ion-icon>  
+        Registrate</ion-button>
+
+        <span class="divider line one-line"></span>
+        <span class="already"></span>
+
+        <ion-button [routerLink]="['/login']" expand="block" color="danger" class="custom-title-font">
+          <ion-icon slot="start" name="person" color="dark"></ion-icon>  
+        Inicia Sesión</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
