--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,13 @@
 #container a {
   text-decoration: none;
 }
+
+
+.custom-toolbar{
+  --background: url('/assets/Images/pizzas.jpg') no-repeat center center / cover;
+  }
+
+  .custom-title-font {
+    font-family: 'Bookman Old Style';
+  }
+  
