--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,25 +1,25 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="custom-toolbar">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-    <ion-title>Iniciar Sesión</ion-title>
+    <ion-title class="custom-title-font" style="text-align: right;">Inicia Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-item lines="full">
-    <ion-label position="floating">Email</ion-label>
+    <ion-label class="custom-title-font" position="floating"><b>Email</b></ion-label>
     <ion-input type="text" #email required></ion-input>
   </ion-item>
   <ion-item lines="full">
-    <ion-label position="floating">Contraseña</ion-label>
+    <ion-label class="custom-title-font" position="floating"><b>Contraseña</b></ion-label>
     <ion-input type="password" #password required></ion-input>
   </ion-item>
   <ion-row>
     <ion-col>
       <ion-button type="submit" (click)="logIn(email, password)" expand="block"
-        >Iniciar Sesión</ion-button
+        >Inicia Sesión</ion-button
       >
     </ion-col>
   </ion-row>
