--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -28,7 +28,7 @@
       <ion-button
         expand="block"
         color="warning"
-        [routerLink]="['/password-reset']"
+        [routerLink]="['/recuperar-contra']"
       >
         Recuperar Contraseña
       </ion-button>
