--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-    <ion-title class="custom-title-font" style="text-align: right;"><b>Registrate</b></ion-title>
+    <ion-title style="text-align: right;"><b>Registrate</b></ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -19,7 +19,7 @@
     </ion-item>
     <ion-row>
       <ion-col> 
-      <ion-button class="custom-title-font"  type="submit" (click)="signUp(email, password)" expand="block">
+      <ion-button type="submit" (click)="signUp(email, password)" expand="block">
         <ion-icon slot="start" name="pizza" style="color:#fed49c"></ion-icon>  
         Registrarse</ion-button>
       </ion-col>
