--- a/src/app/catalogo/catalogo.page.html
+++ b/src/app/catalogo/catalogo.page.html
@@ -1,7 +1,7 @@
 <ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu Principal</ion-title>
+      <ion-title>Menú Principal</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
@@ -10,29 +10,29 @@
         <ion-avatar aria-hidden="true" slot="start">
           <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
         </ion-avatar>
-        <ion-label>Usuario</ion-label>
+        <ion-label class="custom-title-font"><b>Usuario</b></ion-label>
       </ion-item>
       <ion-item [routerLink]="['/home-usuario-loggeado']">
         <ion-icon aria-hidden="true" name="home" slot="start"></ion-icon>
-        <ion-label>Inicio</ion-label>
+        <ion-label class="custom-title-font">Inicio</ion-label>
       </ion-item>
       <ion-item [routerLink]="['/home-usuario-loggeado']">
         <ion-icon aria-hidden="true" name="bicycle" slot="start"></ion-icon>
-        <ion-label>Pide En Linea</ion-label>
+        <ion-label class="custom-title-font">Pide En Línea</ion-label>
       </ion-item>
-      <ion-item [routerLink]="['/home-usuario-loggeado']">
+      <ion-item [routerLink]="['/catalogo']">
         <ion-icon aria-hidden="true" name="book" slot="start"></ion-icon>
-        <ion-label>Menú</ion-label>
+        <ion-label class="custom-title-font">Menú</ion-label>
       </ion-item>
       <ion-item [routerLink]="['/home-usuario-loggeado']">
         <ion-icon aria-hidden="true" name="rocket" slot="start"></ion-icon>
-        <ion-label>Sigue tu Pedido</ion-label>
+        <ion-label class="custom-title-font">Sigue tu Pedido</ion-label>
       </ion-item>
     </ion-list>
     </ion-content>
           <ion-item (click)="authService.SignOut()">
         <ion-icon aria-hidden="true" name="exit" slot="start"></ion-icon>
-        <ion-label>Cerrar Sesión</ion-label>
+        <ion-label class="custom-title-font"><b>Cerrar Sesión</b></ion-label>
       </ion-item>
 </ion-menu>
 <div class="ion-page" id="main-content">
@@ -41,43 +41,53 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Menu</ion-title>
+      <ion-buttons slot="primary" expand="block" [routerLink]="['/']">
+        <ion-icon slot="end" name="cart"></ion-icon>
+      </ion-buttons>
+      <img  class="centered-header-image" src="/assets/Images/Menu.png" />
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Card Title</ion-card-title>
-        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title>Pizzas</ion-card-title>
+        <ion-card-subtitle>Selecciona el sabor de pizza que desees</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://www.recetascocinar.org/wp-content/uploads/2011/04/pizza-de-carne-picada.jpg" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Carnes</ion-checkbox>
           </ion-item>
     
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://elmen.pe/wp-content/uploads/2023/05/Pizza-hawaiana.jpg" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Hawaina</ion-checkbox>
           </ion-item>
     
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://mandolina.co/wp-content/uploads/2023/05/Pizza-Napolitana-Autentica.png" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Napolitana</ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://ilforno.co/cdn/shop/products/ecommerceilfornopizzapolloychampinones-Familiar_992x.png?v=1672240146" />
+            </ion-thumbnail>
+            <ion-checkbox justify="space-between">Pollo y champiñones</ion-checkbox>
           </ion-item>
     
           <ion-item lines="none">
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://images.ecestaticos.com/WJT0BFvdZ4poZa5PiFHuCXX2sTo=/0x0:2121x1414/1200x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2F96f%2F563%2Fc84%2F96f563c8404ac8cd97c158887aa56ae1.jpg" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Pepperoni</ion-checkbox>
           </ion-item>
         </ion-list>
       </ion-card-content>
@@ -85,37 +95,37 @@
 
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Card Title</ion-card-title>
-        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title>Tamaño Pizzas</ion-card-title>
+        <ion-card-subtitle>Selecciona el tamaño de tu pizza</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://d4i7e0edqqgwm.cloudfront.net/documents/producto/420pepperoni-personal-5fb4318d7f6fa343145323.jpg" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Personal (4 trozos)</ion-checkbox>
           </ion-item>
     
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://blog.papajohns.com.gt/hs-fs/hubfs/Blogs%202023/Marzo/Pizzas%20al%20Chilazo/Pizza%20Mediana%20de%20Pepperoni.jpg?width=500&height=303&name=Pizza%20Mediana%20de%20Pepperoni.jpg" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Mediana (6 trozos)</ion-checkbox>
           </ion-item>
     
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://www.pizzaiolo.mx/img/blog/pizza-hecha-de-varios-tipos-de-pizza-02%20(1).png" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Grande (8 trozos)</ion-checkbox>
           </ion-item>
     
           <ion-item lines="none">
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://www.magazinedigital.cl/wp-content/uploads/2023/02/Super-Pepperoni_1.jpg" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Familiar (10 trozos)</ion-checkbox>
           </ion-item>
         </ion-list>
       </ion-card-content>
@@ -123,37 +133,89 @@
 
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Card Title</ion-card-title>
-        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title>Bebida</ion-card-title>
+        <ion-card-subtitle>Selecciona la bebida con la que deseas acompañar tu crazy pizza</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://copservir.vtexassets.com/arquivos/ids/765000/GINGER-CANADA-DRY_F.png?v=637950273511400000" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Canada Dry 1.5L</ion-checkbox>
+          </ion-item>
+          
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://licoreslarebaja.com/173-large_default/gaseosa-coca-cola-15ml.jpg" />
+            </ion-thumbnail>
+            <ion-checkbox justify="space-between">Coca cola 1.5L</ion-checkbox>
           </ion-item>
     
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://misaboracolombia.com/cdn/shop/products/Colombiana_la_nuestra_pet_3_125lt_800px_800x.png?v=1576124798" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Colombiana 1.5L</ion-checkbox>
           </ion-item>
-    
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Item</ion-label>
-          </ion-item>
-    
+
           <ion-item lines="none">
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+              <img alt="Silhouette of mountains" src="https://copservir.vtexassets.com/arquivos/ids/765422/GASEOSA-MANZANA-POSTOBON_F.png?v=637950275205400000" />
             </ion-thumbnail>
-            <ion-label>Item</ion-label>
+            <ion-checkbox justify="space-between">Postobon Manzana 1.5L</ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://copservir.vtexassets.com/arquivos/ids/769778/GASEOSA-SPRITE_F.png?v=637951117939600000" />
+            </ion-thumbnail>
+            <ion-checkbox justify="space-between">Sprite 1.5L</ion-checkbox>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Ingredientes Adicionales</ion-card-title>
+        <ion-card-subtitle>Selecciona ingredientes adicionales para personalizar tu pizza</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-list>
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://content-cocina.lecturas.com/medio/2022/01/12/pizza-papa-johns-pepperoni_64bd69fe_1200x1200.jpg" />
+            </ion-thumbnail>
+            <ion-checkbox justify="space-between">Borde con queso</ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://pbs.twimg.com/media/B_66g7tUQAAj8EH.jpg:large" />
+            </ion-thumbnail>
+            <ion-checkbox justify="space-between">Doble queso</ion-checkbox>
+          </ion-item>
+              
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://s.cornershopapp.com/product-images/4456401.jpg?versionId=pTLQK2I43EAQLVfe5uXIrAGfZjdq2RjC" />
+            </ion-thumbnail>
+            <ion-checkbox justify="space-between">Jalapeños</ion-checkbox>
+          </ion-item>
+
+          <ion-item lines="none">
+            <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://sagal.com.co/cdn/shop/products/Jamon-Premium-de-Cerdo_grande.jpg?v=1608598839" />
+            </ion-thumbnail>
+            <ion-checkbox justify="space-between">Jamón</ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img alt="Silhouette of mountains" src="https://images.squarespace-cdn.com/content/v1/5f19e52b36e37243e9978dce/1596042198558-0YKLW4KE40B76RFC9LL8/CRUDOSMADURADOS3.jpg" />
+            </ion-thumbnail>
+            <ion-checkbox justify="space-between">Salami</ion-checkbox>
           </ion-item>
         </ion-list>
       </ion-card-content>
