--- a/src/app/home-usuario-loggeado/home-usuario-loggeado.page.html
+++ b/src/app/home-usuario-loggeado/home-usuario-loggeado.page.html
@@ -1,7 +1,7 @@
 <ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu Principal</ion-title>
+      <ion-title>Menú Principal</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
@@ -10,29 +10,29 @@
         <ion-avatar aria-hidden="true" slot="start">
           <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
         </ion-avatar>
-        <ion-label>Usuario</ion-label>
+        <ion-label class="custom-title-font"><b>Usuario</b></ion-label>
       </ion-item>
       <ion-item [routerLink]="['/home-usuario-loggeado']">
         <ion-icon aria-hidden="true" name="home" slot="start"></ion-icon>
-        <ion-label>Inicio</ion-label>
+        <ion-label class="custom-title-font">Inicio</ion-label>
       </ion-item>
       <ion-item [routerLink]="['/home-usuario-loggeado']">
         <ion-icon aria-hidden="true" name="bicycle" slot="start"></ion-icon>
-        <ion-label>Pide En Linea</ion-label>
+        <ion-label class="custom-title-font">Pide En Línea</ion-label>
       </ion-item>
-      <ion-item [routerLink]="['/home-usuario-loggeado']">
+      <ion-item [routerLink]="['/catalogo']">
         <ion-icon aria-hidden="true" name="book" slot="start"></ion-icon>
-        <ion-label>Menú</ion-label>
+        <ion-label class="custom-title-font">Menú</ion-label>
       </ion-item>
       <ion-item [routerLink]="['/home-usuario-loggeado']">
         <ion-icon aria-hidden="true" name="rocket" slot="start"></ion-icon>
-        <ion-label>Sigue tu Pedido</ion-label>
+        <ion-label class="custom-title-font">Sigue tu Pedido</ion-label>
       </ion-item>
     </ion-list>
     </ion-content>
           <ion-item (click)="authService.SignOut()">
         <ion-icon aria-hidden="true" name="exit" slot="start"></ion-icon>
-        <ion-label>Cerrar Sesión</ion-label>
+        <ion-label class="custom-title-font"><b>Cerrar Sesión</b></ion-label>
       </ion-item>
 </ion-menu>
 <div class="ion-page" id="main-content">
@@ -41,26 +41,29 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Menu</ion-title>
+      <ion-buttons slot="primary" expand="block" [routerLink]="['/']">
+        <ion-icon slot="end" name="cart"></ion-icon>
+      </ion-buttons>
+      <img  class="centered-header-image" src="/assets/Images/logo.png" />
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
     <ion-card>
       <img alt="Pizza" src="https://alpina.com/media/mageplaza/blog/post/p/i/pizzas.jpg" />
       <ion-card-header>
-        <ion-card-title>Ordena ya!</ion-card-title>
+        <ion-card-title>¡Ordena ya!</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-button color="danger" expand="block" [routerLink]="['/home-usuario-loggeado']">Pide en Linea</ion-button>
+        <ion-button color="danger" expand="block" [routerLink]="['/home-usuario-loggeado']">Pide en Línea</ion-button>
       </ion-card-content>
     </ion-card> 
     <ion-card>
       <img alt="Pizza" src="https://www.napolike.it/wp-content/uploads/2023/06/pizza-italiana.jpg" />
       <ion-card-header>
-        <ion-card-title>Menú</ion-card-title>
+        <ion-card-title>Da un vistazo a nuestro menú</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-button color="success" expand="block" [routerLink]="['/home-usuario-loggeado']">Ver menú</ion-button>
+        <ion-button color="success" expand="block" [routerLink]="['/catalogo']">Ver menú</ion-button>
       </ion-card-content>
     </ion-card> 
   </ion-content>
