--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -31,7 +31,7 @@
   --background: url('/assets/Images/pizzas.jpg') no-repeat center center / cover;
   }
 
-  .custom-title-font {
+  ion-title, h1, p, ion-button {
     font-family: 'Bookman Old Style';
   }
   
