--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-    <ion-title class="custom-title-font" style="text-align: right;">Inicia Sesión</ion-title>
+    <ion-title style="text-align: right;">Inicia Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
