--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -2,6 +2,9 @@
     --background: url('/assets/Images/registro.jpg') no-repeat center center / cover;
     }
   
-    .custom-title-font {
+ion-title, ion-label,  ion-button {
       font-family: 'Bookman Old Style';
     }
+  .custom-title-font{
+    font-family: 'Bookman Old Style';
+  }
