--- a/src/app/verificar-email/verificar-email.page.scss
+++ b/src/app/verificar-email/verificar-email.page.scss
@@ -3,6 +3,6 @@
     --background: url('/assets/Images/verificacion.jpg') no-repeat center center / cover;
     }
   
-.custom-title-font {
+ion-title, h2, p, ion-button{
     font-family: 'Bookman Old Style';
   }
