--- a/src/app/pide-en-linea/pide-en-linea.page.html
+++ b/src/app/pide-en-linea/pide-en-linea.page.html
@@ -45,6 +45,62 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    
+  <form>
+    <ion-text><sub>Dirección</sub></ion-text>
+    <ion-list>
+      <ion-item>
+        <ion-select label="Tipo de via" label-placement="floating">
+          <ion-select-option value="Autopista">Autopista</ion-select-option>
+          <ion-select-option value="Avenida">Avenida</ion-select-option>
+          <ion-select-option value="Avenida Calle">Avenida Calle</ion-select-option>
+          <ion-select-option value="Avenida Carrera">Avenida Carrera</ion-select-option>
+          <ion-select-option value="Calle">Calle</ion-select-option>
+          <ion-select-option value="Carrera">Carrera</ion-select-option>
+          <ion-select-option value="Diagonal">Diagonal</ion-select-option>
+          <ion-select-option value="Trasversal">Trasversal</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-input style="width: 30%"></ion-input>
+        <ion-text style="width: 30px">#</ion-text>
+        <ion-input style="width: 35%"></ion-input>
+        <ion-text style="width: 30px">-</ion-text>
+        <ion-input style="width: 35%"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input label="Barrio" labelPlacement="floating" placeholder="Ejemplo: Suba Gaitana"></ion-input>
+      </ion-item>
+      <ion-text><sub>Tipo de Inmueble</sub></ion-text>
+      <ion-item>
+        <ion-select label="Seleccionar" label-placement="floating">
+          <ion-select-option value="Apartamento">Apartamento</ion-select-option>
+          <ion-select-option value="Casa">Casa</ion-select-option>
+          <ion-select-option value="Edificio">Edificio</ion-select-option>
+          <ion-select-option value="Hotel">Hotel</ion-select-option>
+          <ion-select-option value="Oficina">Oficina</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-input></ion-input>
+      </ion-item>
+      <ion-text><sub>Bloque o Interior</sub></ion-text>
+      <ion-item>
+        <ion-select label="Seleccionar" label-placement="floating">
+          <ion-select-option value="Manzana">Manzana</ion-select-option>
+          <ion-select-option value="Zona">Zona</ion-select-option>
+          <ion-select-option value="Bloque">Bloque</ion-select-option>
+          <ion-select-option value="Habitación">Habitación</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-input></ion-input>
+      </ion-item>
+      <ion-text><sub>Instrucciones para el repartidor</sub></ion-text>
+      <ion-item>
+        <ion-input style="width: 100%; height: 50%;" placeholder="Tocar el timbre, etc."></ion-input>
+      </ion-item>
+        <ion-button expand="block" color="danger" type="submit" [routerLink]="['/catalogo']">Ir al menú</ion-button>
+    </ion-list>
+  </form>
   </ion-content>
 </div>
