--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -8,3 +8,12 @@ ion-title, ion-label,  ion-button {
   .custom-title-font{
     font-family: 'Bookman Old Style';
   }
+ .custom1 {
+    --background: #03381d;
+}
+.custom2 {
+  --background:  rgb(120, 2, 2);
+}
+.custom3 {
+  --background: rgb(118, 171, 255);
+}
