--- a/src/app/verificar-email/verificar-email.page.html
+++ b/src/app/verificar-email/verificar-email.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-    <ion-title style="text-align: left; "><b>Verificar Email</b></ion-title>
+    <ion-title style="text-align: right; "><b>Verificar Email</b></ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -14,10 +14,10 @@
       <p >Te invitamos a que revises tu correo electrónico y des click al 
         link que te enviamos para verificar que eres tú.</p>
       <ion-col style="text-align: center;"> 
-      <ion-button type="submit" (click)="authService.SendVerificationMail()" expand="block">
+      <ion-button class="custom1" type="submit" (click)="authService.SendVerificationMail()" expand="block">
         <ion-icon slot="start" name="refresh"></ion-icon>  
         Reenviar correo de verificación</ion-button>
-        <ion-button type="submit" [routerLink]="['/home']" expand="block">
+        <ion-button class="custom2" type="submit" [routerLink]="['/home']" expand="block">
           <ion-icon slot="start" name="home"></ion-icon>  
           Volver al Inicio de Sesión</ion-button>
       </ion-col>
