--- a/src/app/verificar-email/verificar-email.page.scss
+++ b/src/app/verificar-email/verificar-email.page.scss
@@ -6,3 +6,12 @@
 ion-title, h2, p, ion-button{
     font-family: 'Bookman Old Style';
   }
+  .custom1 {
+    --background: #03381d;
+  }
+  .custom2 {
+    --background:  rgb(120, 2, 2);
+  }
+
+
+  
