--- a/src/app/catalogo/catalogo.page.html
+++ b/src/app/catalogo/catalogo.page.html
@@ -1,4 +1,4 @@
-<ion-menu contentId="main-content">
+<ion-menu type="overlay" contentId="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menú Principal</ion-title>
@@ -16,7 +16,7 @@
         <ion-icon aria-hidden="true" name="home" slot="start"></ion-icon>
         <ion-label class="custom-title-font">Inicio</ion-label>
       </ion-item>
-      <ion-item [routerLink]="['/home-usuario-loggeado']">
+      <ion-item [routerLink]="['/pide-en-linea']">
         <ion-icon aria-hidden="true" name="bicycle" slot="start"></ion-icon>
         <ion-label class="custom-title-font">Pide En Línea</ion-label>
       </ion-item>
@@ -34,7 +34,7 @@
         <ion-icon aria-hidden="true" name="exit" slot="start"></ion-icon>
         <ion-label class="custom-title-font"><b>Cerrar Sesión</b></ion-label>
       </ion-item>
-</ion-menu>
+</ion-menu> 
 <div class="ion-page" id="main-content">
   <ion-header>
     <ion-toolbar>
