--- a/src/app/home-usuario-loggeado/home-usuario-loggeado.page.html
+++ b/src/app/home-usuario-loggeado/home-usuario-loggeado.page.html
@@ -1,4 +1,4 @@
-<ion-menu contentId="main-content">
+<ion-menu type="overlay" contentId="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menú Principal</ion-title>
@@ -16,7 +16,7 @@
         <ion-icon aria-hidden="true" name="home" slot="start"></ion-icon>
         <ion-label class="custom-title-font">Inicio</ion-label>
       </ion-item>
-      <ion-item [routerLink]="['/home-usuario-loggeado']">
+      <ion-item [routerLink]="['/pide-en-linea']">
         <ion-icon aria-hidden="true" name="bicycle" slot="start"></ion-icon>
         <ion-label class="custom-title-font">Pide En Línea</ion-label>
       </ion-item>
@@ -54,7 +54,9 @@
         <ion-card-title>¡Ordena ya!</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-button color="danger" expand="block" [routerLink]="['/home-usuario-loggeado']">Pide en Línea</ion-button>
+        <ion-button color="danger" expand="block" [routerLink]="['/pide-en-linea']">Pide en Línea
+          <ion-icon aria-hidden="true" name="bicycle" slot="start"></ion-icon>
+        </ion-button>
       </ion-card-content>
     </ion-card> 
     <ion-card>
@@ -63,7 +65,9 @@
         <ion-card-title>Da un vistazo a nuestro menú</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-button color="success" expand="block" [routerLink]="['/catalogo']">Ver menú</ion-button>
+        <ion-button color="success" expand="block" [routerLink]="['/catalogo']">Ver menú
+          <ion-icon aria-hidden="true" name="book" slot="start"></ion-icon>
+        </ion-button>
       </ion-card-content>
     </ion-card> 
   </ion-content>
