--- a/src/app/pide-en-linea/pide-en-linea.page.html
+++ b/src/app/pide-en-linea/pide-en-linea.page.html
@@ -1,7 +1,7 @@
-<ion-menu contentId="main-content">
+<ion-menu type="overlay" contentId="main-content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu Principal</ion-title>
+      <ion-title>Menú Principal</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
@@ -10,43 +10,46 @@
         <ion-avatar aria-hidden="true" slot="start">
           <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
         </ion-avatar>
-        <ion-label>Usuario</ion-label>
+        <ion-label class="custom-title-font"><b>Usuario</b></ion-label>
       </ion-item>
       <ion-item [routerLink]="['/home-usuario-loggeado']">
         <ion-icon aria-hidden="true" name="home" slot="start"></ion-icon>
-        <ion-label>Inicio</ion-label>
+        <ion-label class="custom-title-font">Inicio</ion-label>
       </ion-item>
-      <ion-item [routerLink]="['/home-usuario-loggeado']">
+      <ion-item [routerLink]="['/pide-en-linea']">
         <ion-icon aria-hidden="true" name="bicycle" slot="start"></ion-icon>
-        <ion-label>Pide En Linea</ion-label>
+        <ion-label class="custom-title-font">Pide En Línea</ion-label>
       </ion-item>
-      <ion-item [routerLink]="['/home-usuario-loggeado']">
+      <ion-item [routerLink]="['/catalogo']">
         <ion-icon aria-hidden="true" name="book" slot="start"></ion-icon>
-        <ion-label>Menú</ion-label>
+        <ion-label class="custom-title-font">Menú</ion-label>
       </ion-item>
       <ion-item [routerLink]="['/home-usuario-loggeado']">
         <ion-icon aria-hidden="true" name="rocket" slot="start"></ion-icon>
-        <ion-label>Sigue tu Pedido</ion-label>
+        <ion-label class="custom-title-font">Sigue tu Pedido</ion-label>
       </ion-item>
     </ion-list>
     </ion-content>
           <ion-item (click)="authService.SignOut()">
         <ion-icon aria-hidden="true" name="exit" slot="start"></ion-icon>
-        <ion-label>Cerrar Sesión</ion-label>
+        <ion-label class="custom-title-font"><b>Cerrar Sesión</b></ion-label>
       </ion-item>
-</ion-menu>
+</ion-menu> 
 <div class="ion-page" id="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Menu</ion-title>
+      <ion-buttons slot="primary" expand="block" [routerLink]="['/']">
+        <ion-icon slot="end" name="cart"></ion-icon>
+      </ion-buttons>
+      <img  class="centered-header-image" src="/assets/Images/pide-linea.png" />
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
   <form>
-    <ion-text><sub>Dirección</sub></ion-text>
+    <ion-text style="color:#fed49c"><sub><b>Dirección</b></sub></ion-text>
     <ion-list>
       <ion-item>
         <ion-select label="Tipo de via" label-placement="floating">
@@ -70,7 +73,7 @@
       <ion-item>
         <ion-input label="Barrio" labelPlacement="floating" placeholder="Ejemplo: Suba Gaitana"></ion-input>
       </ion-item>
-      <ion-text><sub>Tipo de Inmueble</sub></ion-text>
+      <ion-text style="color:#fed49c"><sub><b>Tipo de Inmueble</b></sub></ion-text>
       <ion-item>
         <ion-select label="Seleccionar" label-placement="floating">
           <ion-select-option value="Apartamento">Apartamento</ion-select-option>
@@ -80,10 +83,7 @@
           <ion-select-option value="Oficina">Oficina</ion-select-option>
         </ion-select>
       </ion-item>
-      <ion-item>
-        <ion-input></ion-input>
-      </ion-item>
-      <ion-text><sub>Bloque o Interior</sub></ion-text>
+      <ion-text style="color:#fed49c"><sub><b>Bloque o Interior</b></sub></ion-text>
       <ion-item>
         <ion-select label="Seleccionar" label-placement="floating">
           <ion-select-option value="Manzana">Manzana</ion-select-option>
@@ -93,13 +93,15 @@
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-input></ion-input>
+        <ion-input placeholder="Detalles adicionales, Ejemplo: # de torre, etc."></ion-input>
       </ion-item>
-      <ion-text><sub>Instrucciones para el repartidor</sub></ion-text>
+      <ion-text style="color:#fed49c"><sub><b>Instrucciones para el repartidor</b></sub></ion-text>
       <ion-item>
         <ion-input style="width: 100%; height: 50%;" placeholder="Tocar el timbre, etc."></ion-input>
       </ion-item>
-        <ion-button expand="block" color="danger" type="submit" [routerLink]="['/catalogo']">Ir al menú</ion-button>
+        <ion-button expand="block" type="submit" [routerLink]="['/catalogo']">Ir al menú
+          <ion-icon aria-hidden="true" name="book" slot="start"></ion-icon>
+        </ion-button>
     </ion-list>
   </form>
   </ion-content>
