--- a/src/app/recuperar-contra/recuperar-contra.page.html
+++ b/src/app/recuperar-contra/recuperar-contra.page.html
@@ -1,35 +1,34 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar  class="custom-toolbar">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-    <ion-title>Ionic Firebase Recover Passowrd Example</ion-title>
+    <ion-title style="text-align: right;">Recupera tu contraseña</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <ion-content>
     <ion-item lines="full">
-      <p>Enter email to send password reset instructions.</p>
+      <p>Ingresa tu email y te enviaremos las intrucciones para recuperar tu contraseña</p>
     </ion-item>
     <form>
       <ion-row>
         <ion-col>
           <ion-item lines="full">
-            <ion-label position="floating">Email</ion-label>
+            <ion-label class="custom-title-font"  position="floating"><b>Email</b></ion-label>
             <ion-input type="text" #email required></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-button
-            type="submit"
-            color="danger"
-            (click)="authService.PasswordRecover(email.value)"
-            expand="block"
-          >
-            Send Password Reset Mail
+          <ion-button class="custom" type="submit" (click)="authService.PasswordRecover(email.value)" expand="block">Enviar email
+            <ion-icon slot="start" name="mail-unread"></ion-icon>  
           </ion-button>
+          <ion-button class="custom1" type="submit" [routerLink]="['/home']" expand="block">
+            <ion-icon slot="start" name="home"></ion-icon>  
+            Volver al Inicio de Sesión</ion-button>
         </ion-col>
       </ion-row>
     </form>
