--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -20,8 +20,8 @@
     <ion-row>
       <ion-col> 
       <ion-button type="submit" (click)="signUp(email, password)" expand="block">
-        <ion-icon slot="start" name="pizza" style="color:#fed49c"></ion-icon>  
-        Registrarse</ion-button>
+        <ion-icon slot="start" name="pizza"></ion-icon>  
+        Registrate</ion-button>
       </ion-col>
     </ion-row>
   </form>
