--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,51 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId="main-menu" contentId="main">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menú Principal</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+
+      <ion-list>
+        <ion-item>
+          <ion-avatar aria-hidden="true" slot="start">
+            <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          </ion-avatar>
+          <ion-label class="custom-title-font"><b>Usuario</b></ion-label>
+        </ion-item>
+        <ion-menu-toggle>
+        <ion-item [routerLink]="['/home-usuario-loggeado']">
+          <ion-icon aria-hidden="true" name="home" slot="start"></ion-icon>
+          <ion-label class="custom-title-font">Inicio</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle>
+        <ion-item [routerLink]="['/pide-en-linea']">
+          <ion-icon aria-hidden="true" name="bicycle" slot="start"></ion-icon>
+          <ion-label class="custom-title-font">Pide En Línea</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+        <ion-menu-toggle>
+        <ion-item [routerLink]="['/catalogo']">
+          <ion-icon aria-hidden="true" name="book" slot="start"></ion-icon>
+          <ion-label class="custom-title-font">Menú</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+        <ion-menu-toggle>
+        <ion-item [routerLink]="['/home-usuario-loggeado']">
+          <ion-icon aria-hidden="true" name="rocket" slot="start"></ion-icon>
+          <ion-label class="custom-title-font">Sigue tu Pedido</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+      </ion-list>
+      </ion-content>
+      <ion-menu-toggle>
+            <ion-item (click)="authService.SignOut()">
+          <ion-icon aria-hidden="true" name="exit" slot="start"></ion-icon>
+          <ion-label class="custom-title-font"><b>Cerrar Sesión</b></ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
