--- a/src/app/catalogo/catalogo.page.scss
+++ b/src/app/catalogo/catalogo.page.scss
@@ -2,12 +2,10 @@
     display: block;
     margin: 0 auto;
     text-align: center;
+    height: 40px;
+    width:80px;
   }
-
-  ion-title, ion-button, ion-checkbox, ion-card-title, ion-card-subtitle  {
-    font-family: 'Bookman Old Style';
-  }
- 
-  .custom-title-font{
-    font-family: 'Bookman Old Style';
-  }
+ion-icon{
+  width: 35px;
+  height: 35px;
+}
