--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -26,12 +25,20 @@
   text-decoration: none;
 }
 
-
+h1{
+  color:#fed49c;
+  font-weight:bold;
+}
 .custom-toolbar{
   --background: url('/assets/Images/pizzas.jpg') no-repeat center center / cover;
   }
 
-  ion-title, h1, p, ion-button {
-    font-family: 'Bookman Old Style';
-  }
+.custom2{
+  --background: rgb(120, 2, 2);
+}
+
+.custom1{
+  --background: #03381d; 
+}
+
   
