--- a/src/app/home-usuario-loggeado/home-usuario-loggeado.page.html
+++ b/src/app/home-usuario-loggeado/home-usuario-loggeado.page.html
@@ -8,7 +8,6 @@
         <ion-icon slot="end" name="cart"></ion-icon>
       </ion-buttons>
       <img  class="centered-header-image" src="/assets/Images/logo.png" />
-      <ion-title>Prueba</ion-title>
     </ion-toolbar>
   </ion-header>
   
@@ -19,7 +18,7 @@
         <ion-card-title>¡Ordena ya!</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-button color="danger" expand="block" [routerLink]="['/pide-en-linea']">Pide en Línea
+        <ion-button class="custom2" expand="block" [routerLink]="['/pide-en-linea']">Pide en Línea
           <ion-icon aria-hidden="true" name="bicycle" slot="start"></ion-icon>
         </ion-button>
       </ion-card-content>
@@ -30,7 +29,7 @@
         <ion-card-title>Da un vistazo a nuestro menú</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-button color="success" expand="block" [routerLink]="['/catalogo']">Ver menú
+        <ion-button class="custom1" expand="block" [routerLink]="['/catalogo']">Ver menú
           <ion-icon aria-hidden="true" name="book" slot="start"></ion-icon>
         </ion-button>
       </ion-card-content>
