pide en linea changes

--- a/src/app/pide-en-linea/pide-en-linea.page.scss
+++ b/src/app/pide-en-linea/pide-en-linea.page.scss
@@ -2,13 +2,16 @@
     display: block;
     margin: 0 auto;
     text-align: center;
-  }
+    height: 40px;
+    width: 90px;
+}
+ion-icon{
+  width: 35px;
+  height: 35px;
+}
+.custom1 {
+  --background: #03381d;
+}
 
-  ion-title, ion-button, ion-text, ion-select, ion-input, ion-text{
-    font-family: 'Bookman Old Style';
-  }
- 
-  .custom-title-font{
-    font-family: 'Bookman Old Style';
-  }
+
  
