--- a/src/app/pide-en-linea/pide-en-linea.page.html
+++ b/src/app/pide-en-linea/pide-en-linea.page.html
@@ -62,7 +62,7 @@
       <ion-item>
         <ion-input style="width: 100%; height: 50%;" placeholder="Tocar el timbre, etc."></ion-input>
       </ion-item>
-        <ion-button expand="block" type="submit" [routerLink]="['/catalogo']">Ir al menú
+        <ion-button class="custom1" expand="block" type="submit" [routerLink]="['/catalogo']">Ir al menú
           <ion-icon aria-hidden="true" name="book" slot="start"></ion-icon>
         </ion-button>
     </ion-list>
