--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -10,11 +10,11 @@
 <ion-content>
   <form>    
     <ion-item lines="full">
-      <ion-label class="custom-title-font" position="floating"><b>Correo Electrónico</b></ion-label>
-      <ion-input type="text" #email required></ion-input>
+      <ion-label position="floating"><b>Correo Electrónico</b></ion-label>
+      <ion-input type="email" #email required></ion-input>
     </ion-item> 
     <ion-item lines="full">
-      <ion-label class="custom-title-font" position="floating"><b>Contraseña</b></ion-label>
+      <ion-label position="floating"><b>Contraseña</b></ion-label>
       <ion-input type="password" #password required></ion-input>
     </ion-item>
     <ion-row>
