--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -1,16 +1,22 @@
-    .custom-toolbar{
-    --background: url('/assets/Images/registro.jpg') no-repeat center center / cover;
-    }
+.custom-toolbar{
+--background: url('/assets/Images/registro.jpg') no-repeat center center / cover;
+}
 
-    .custom-title-font{
-      font-family: 'Bookman Old Style';
-    }
-  
-    ion-title {
-      font-family: 'Bookman Old Style';
-    }
+ion-button {
+  --background: #03381d;
+}
 
-    ion-button {
-        --background: #03381d;
-        font-family: 'Bookman Old Style';
-    }
+:host ::ng-deep .has-focus.sc-ion-input-md-h input.sc-ion-input-md {
+  caret-color: white; 
+}
+:host ::ng-deep .sc-ion-input-md-h{
+  --highlight-color-focused: #03381d;
+  --highlight-color: #03381d;
+  --border-color: #03381d;
+}
+ion-item.item-has-focus > ion-label, item-native{
+  color: white !important;
+}
+ion-item {
+  --highlight-color-focused: #03381d;
+}
