--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,17 +7,23 @@
     </ion-header>
     <ion-content class="ion-padding">
 
-      <ion-list>
-        <ion-item>
+      <ion-list >
+        <ion-item   *ngIf="info">
           <ion-avatar aria-hidden="true" slot="start">
             <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
           </ion-avatar>
-          <ion-label class="custom-title-font"><b>Usuario</b></ion-label>
+          <ion-label ><b>{{info.nombre}}</b></ion-label>
         </ion-item>
         <ion-menu-toggle>
         <ion-item [routerLink]="['/home-usuario-loggeado']">
           <ion-icon aria-hidden="true" name="home" slot="start"></ion-icon>
           <ion-label class="custom-title-font">Inicio</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle>
+        <ion-item *ngIf="rol === 'administrador'" [routerLink]="['/info-usuarios']">
+          <ion-icon aria-hidden="true" name="planet" slot="start"></ion-icon>
+          <ion-label class="custom-title-font">Información Usuarios</ion-label>
         </ion-item>
       </ion-menu-toggle>
       <ion-menu-toggle>
