Add perfil admin

--- a/src/app/info-usuarios/info-usuarios.page.html
+++ b/src/app/info-usuarios/info-usuarios.page.html
@@ -4,32 +4,27 @@
       <ion-buttons slot="start">
         <ion-menu-button menu="main-menu"></ion-menu-button>
       </ion-buttons>
-      <img  class="centered-header-image" src="/assets/Images/Menu.png" />
+      <img  class="centered-header-image" src="/assets/Images/Info-usuarios.png" />
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
     <ion-card>
       <ion-card-header>
         <ion-card-title>Datos Usuarios Registrados</ion-card-title>
+        <ion-card-subtitle>Número total de usuarios registrados: {{numeroUsuarios}}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
-          <ion-item *ngfor="let item  of datos">
+          <ion-item *ngFor="let dato  of datos">
             <ion-avatar aria-hidden="true" slot="start">
               <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
             </ion-avatar>
-            <ion-label ><b>Nombre: </b>{{item.nombre}}</ion-label>
-          </ion-item>
-          <ion-item *ngfor="let item  of datos">
-            <ion-label ><b>Email: </b>{{item.email}}</ion-label>
-          </ion-item>
-          <ion-item *ngfor="let item  of datos">
-            <ion-label ><b>Perfil: </b>{{item.perfil}}</ion-label>
+            <ion-label ><b>Nombre: </b>{{dato.nombre}}<br><br><b>Email: </b>{{dato.email}} <br><br><b>Perfil: </b>{{dato.perfil}} </ion-label>
+
           </ion-item>
         </ion-list>
       </ion-card-content>
     </ion-card>
-
    
   </ion-content>
 </div>
